--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 	<div class="game">
 	<h1>FizzBuzz Game</h1>
-	<p>Enter a number</p>
+	<p>Enter a number from 1 - 100</p>
 	<p><input type="text" name="number_input" id="number_input">
 		</p>
 	</div>
