--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<title>FizzBuzz</title>
 	<link rel="stylesheet" type="text/css" href="main.css">
 	<script src="http://code.jquery.com/jquery-latest.min.js"></script>
-	<script src="app.js"></script> 
+	<script src="appRefractor.js"></script> 
 </head>
 <body>
 	<div class="game">
